--- a/tufte.css
+++ b/tufte.css
@@ -141,7 +141,13 @@ figure.fullwidth figcaption { margin-right: 24%; }
 a { color: #111;
     text-decoration: none;
     border-bottom: 1px solid #777;
-    padding-bottom: 1px; }
+    padding-bottom: 1px;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s; }
+
+a:hover { color: #f05;
+          border-color: #f05; }
 
 img { max-width: 100%; }
 
