--- a/tufte.css
+++ b/tufte.css
@@ -37,12 +37,12 @@ h3 { font-style: italic;
      margin-bottom: 0;
      line-height: 1; }
 
-subtitle { font-style: italic;
-           margin-top: 1rem;
-           margin-bottom: 1rem;
-           font-size: 1.8rem;
-           display: block;
-           line-height: 1; }
+p.subtitle { font-style: italic;
+             margin-top: 1rem;
+             margin-bottom: 1rem;
+             font-size: 1.8rem;
+             display: block;
+             line-height: 1; }
 
 table { width: 98%;
         text-align: right;
