Fixes table-caption/table layout issue in Firefox
Inserted `clear: left` in CSS for `table` so table would be positioned below table-caption, instead of colliding with it at mobile widths in Firefox 40.0.3/Mac.

--- a/tufte.css
+++ b/tufte.css
@@ -45,6 +45,7 @@ p.subtitle { font-style: italic;
              line-height: 1; }
 
 table { width: 98%;
+        clear: left;
         text-align: right;
         font-size: 1.2rem;
         line-height: 1.4;
