--- a/tufte.css
+++ b/tufte.css
@@ -44,8 +44,9 @@ p.subtitle { font-style: italic;
              display: block;
              line-height: 1; }
 
-table { width: 98%;
-        text-align: right;
+table { overflow-x: scroll;
+        width: 98%;
+        text-align: center;
         font-size: 1.2rem;
         line-height: 1.4;
         margin: 1.4rem 1%;
@@ -55,12 +56,21 @@ table { width: 98%;
         -moz-font-feature-settings: 'tnum';
         -ms-font-feature-settings: 'tnum'; }
 
-thead th { border-bottom: 1px solid #AAAAAA;
+table.table-alpha { }
+
+table.table-beta { font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
+
+thead th { text-align: left;
+           border-bottom: 1px solid #AAAAAA;
            font-weight: 400;
            border-collapse: separate;
            border-spacing: 5px 5px; }
 
 td.text { text-align: left; }
+
+td > div.number { width: 27px;
+                  text-align: right;
+                  display: inline-block; }
 
 span.table-label { padding-top: 8px; } /* to maintain height relative to table header row */
 
@@ -137,7 +147,8 @@ figcaption { float: right;
              font-size: 1.0rem;
              line-height: 1.6;
              vertical-align: baseline;
-             position: relative; }
+             position: relative;
+             max-width: 40%; }
 
 figure.fullwidth figcaption { margin-right: 24%; }
 
@@ -154,8 +165,8 @@ img { max-width: 100%; }
                          width: 50%;
                          margin-top: 0;
                          margin-bottom: 0;
-                         font-size: 1.0rem;
-                         line-height: 1.6;
+                         font-size: 1.1rem;
+                         line-height: 1.3;
                          vertical-align: baseline;
                          position: relative; }
 
@@ -191,14 +202,18 @@ img { max-width: 100%; }
 
 p, footer, div.table-wrapper { width: 55%; }
 
+div.table-wrapper { overflow-x: scroll; }
+
 @media screen and (max-width: 760px) { p, footer { width: 90%; }
                                        pre.code { width: 87.5%; }
                                        ul { width: 85%; }
                                        figure { max-width: 90%; }
-                                       figcaption, figure.fullwidth figcaption { margin-right: 0%; }
+                                       figcaption, figure.fullwidth figcaption { margin-right: 0%;
+                                                                                 max-width: none; }
                                        blockquote p, blockquote footer { width: 90%; }}
 
-.sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }
+.sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+        letter-spacing: .03em; }
 
 .code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
         font-size: 1.125rem;
@@ -247,5 +262,6 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
                                              margin-right: 1%;
                                              vertical-align: baseline;
                                              position: relative; }
-                            table, table.booktabs { width: 85%; }
+                            div.table-wrapper, table, table.booktabs { width: 85%; }
+                            div.table-wrapper { border-right: 1px solid #efefef; }
                             img { width: 100%; } }
