--- a/et-bembo.css
+++ b/et-bembo.css
@@ -23,3 +23,11 @@
   font-weight: bold;
   font-style: normal
 }
+
+@font-face {
+  font-family: "et-bembo-roman-old-style";
+  src: url("et-bembo/et-bembo-roman-old-style-figures/et-bembo-roman-old-style-figures.eot");
+  src: url("et-bembo/et-bembo-roman-old-style-figures/et-bembo-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-bembo/et-bembo-roman-old-style-figures/et-bembo-roman-old-style-figures.woff") format("woff"), url("et-bembo/et-bembo-roman-old-style-figures/et-bembo-roman-old-style-figures.ttf") format("truetype"), url("et-bembo/et-bembo-roman-old-style-figures/et-bembo-roman-old-style-figures.svg#etbemboromanosf") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
