--- a/tufte.css
+++ b/tufte.css
@@ -88,9 +88,32 @@ table { overflow-x: scroll;
         -moz-font-feature-settings: 'tnum';
         -ms-font-feature-settings: 'tnum'; }
 
-table.table-alpha { }
+div.supertable-wrapper { font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
 
-table.table-beta { font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
+div.supertable-wrapper > h3 { font-style: normal;
+                              font-size: 1.7rem;
+                              width: 100%; }
+
+div.supertable-wrapper > p { font-style: normal;
+                             width: 100%;
+                             margin-top: 0.5rem;
+                             font-size: 1rem; }
+
+table.supertable { font-size: 1rem;
+                   border-spacing: 0 1px; }
+
+table.supertable > tbody > tr > td:nth-child(1) { padding-left: 1.5em;
+                                                  text-indent: -.5em;
+                                                  padding-right: 1.5em; }
+
+table.supertable > tbody > tr > td.pseudoparagraph-heading { padding-left: 0em; }
+table.supertable > tbody > tr > td.pseudoparagraph-footer { padding-left: 0em;
+                                                            padding-top: 1em;
+                                                            text-indent: 0em;
+                                                            font-style: italic; }
+
+table > tbody > tr.divider > td { padding-bottom: 5px; 
+                                  border-bottom: 1px solid #AAAAAA; }
 
 thead th { text-align: left;
            border-bottom: 1px solid #AAAAAA;
@@ -100,9 +123,11 @@ thead th { text-align: left;
 
 td.text { text-align: left; }
 
-td > div.number { width: 27px;
-                  text-align: right;
+td > div.number { text-align: right;
                   display: inline-block; }
+
+td > div.number2 { width: 1rem; }
+td > div.number7 { width: 3.3rem; }
 
 span.table-label { padding-top: 8px; } /* to maintain height relative to table header row */
 
