--- a/tufte.css
+++ b/tufte.css
@@ -67,6 +67,8 @@ h3 { font-style: italic;
      margin-top: 2rem;
      margin-bottom: 0;
      line-height: 1; }
+     
+h1:target, h2:target, h3:target { box-shadow: 0 1rem #eeeeec; }
 
 p.subtitle { font-style: italic;
              margin-top: 1rem;
