Wrap code and prefix wrapped lines with right arrow hook
   *** Unresolved issue: this commit changes overflow
   *** behavior of existing code blocks to wrap.

Hopefully someone with more CSS experience can point me in the right direction.

Note:
  * wrap symbol from http://stackoverflow.com/a/330352
  * wrapping from https://jsfiddle.net/adamschwartz/4jw0v3d6/show/light/

--- a/tufte.css
+++ b/tufte.css
@@ -231,7 +231,15 @@ h1 .code, h2 .code, h3 .code { font-size: 0.80em; }
 
 pre.code { width: 52.5%;
            padding-left: 2.5%;
-           overflow-x: auto; }
+           white-space: pre-wrap;
+           word-wrap: normal;
+           /*overflow-x: auto; */}
+
+pre.code line { background: transparent url(img/wrapped.gif) no-repeat 0 1.42em ; 
+               display: inline-block;
+               text-indent: -7em;
+               margin-left: 7em;
+               padding-left: 1.3em; }
 
 pre.code.fullwidth { width: 90%; }
 
