--- a/tufte.css
+++ b/tufte.css
@@ -225,7 +225,8 @@ h1 .code, h2 .code, h3 .code { font-size: 0.80em; }
 
 .marginnote .code, .sidenote .code { font-size: 1rem; }
 
-pre.code { width: 52.5%;
+pre.code { font-size: 0.9rem;
+           width: 52.5%;
            padding-left: 2.5%;
            overflow-x: auto; }
 
