--- a/tufte.css
+++ b/tufte.css
@@ -200,15 +200,15 @@ div.table-wrapper { overflow-x: auto;
 .sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
         letter-spacing: .03em; }
 
-.code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-        font-size: 1.0rem;
-        line-height: 1.42; }
+code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+       font-size: 1.0rem;
+       line-height: 1.42; }
 
-.sans.code { font-size: 1.2rem; }
+.sans > code { font-size: 1.2rem; }
 
-h1 .code, h2 .code, h3 .code { font-size: 0.80em; }
+h1 > code, h2 > code, h3 > code { font-size: 0.80em; }
 
-.marginnote .code, .sidenote .code { font-size: 1rem; }
+.marginnote > code, .sidenote > code { font-size: 1rem; }
 
 pre.code { font-size: 0.9rem;
            width: 52.5%;
