--- a/tufte.css
+++ b/tufte.css
@@ -236,19 +236,16 @@ label.sidenote-number { display: inline; }
 
 label.margin-toggle:not(.sidenote-number) { display: none; }
 
-.iframe-wrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
-}
-.iframe-wrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
+.iframe-wrapper { position: relative;
+	          padding-bottom: 56.25%; /* 16:9 */
+	          padding-top: 25px;
+	          height: 0; }
+
+.iframe-wrapper iframe { position: absolute;
+	                 top: 0;
+	                 left: 0;
+	                 width: 100%;
+	                 height: 100%; }
 
 @media (max-width: 760px) { body { width: 84%;
                                    padding-left: 8%;
