remove redundandt sidenote counter

--- a/tufte.css
+++ b/tufte.css
@@ -180,8 +180,7 @@ img { max-width: 100%; }
 
 .sidenote-number { counter-increment: sidenote-counter; }
 
-.sidenote-number:after, .sidenote:before { content: counter(sidenote-counter) " ";
-                                           font-family: et-book-roman-old-style;
+.sidenote-number:after, .sidenote:before { font-family: et-book-roman-old-style;
                                            position: relative;
                                            vertical-align: baseline; }
 
