--- a/tufte.css
+++ b/tufte.css
@@ -49,7 +49,7 @@ h1 { font-weight: 400;
 h2 { font-style: italic;
      font-weight: 400;
      margin-top: 2.1rem;
-     margin-bottom: 0;
+     margin-bottom: 1.4rem;
      font-size: 2.2rem;
      line-height: 1; }
 
@@ -57,7 +57,7 @@ h3 { font-style: italic;
      font-weight: 400;
      font-size: 1.7rem;
      margin-top: 2rem;
-     margin-bottom: 0;
+     margin-bottom: 1.4rem;
      line-height: 1; }
 
 hr { display: block;
