Prevent adjustments in `code` font size after orientation changes in iOS

--- a/tufte.css
+++ b/tufte.css
@@ -314,7 +314,8 @@ div.table-wrapper {
 code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 1.0rem;
-    line-height: 1.42; 
+    line-height: 1.42;
+    -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS. See https://github.com/edwardtufte/tufte-css/issues/81#issuecomment-261953409 */
 }
 
 .sans > code {
