--- a/tufte.css
+++ b/tufte.css
@@ -8,7 +8,8 @@
     src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
     src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
     font-weight: normal;
-    font-style: normal; 
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -16,7 +17,8 @@
     src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot");
     src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
     font-weight: normal;
-    font-style: italic; 
+    font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -24,7 +26,8 @@
     src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
     src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
     font-weight: bold;
-    font-style: normal; 
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -32,7 +35,8 @@
     src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
     src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
     font-weight: normal;
-    font-style: normal; 
+    font-style: normal;
+    font-display: swap;
 }
 
 /* Tufte CSS styles */
