Align baseline of sidenote/marginnote with main text
This adds 0.3rem of padding to the top of margin notes and sidenotes,
causing the baseline of the first line of the note to be aligned with
the baseline of the main body text.

As discussed in #134, this is the approach taken in Tufte's books.

Closes #134.

--- a/tufte.css
+++ b/tufte.css
@@ -262,7 +262,7 @@ img {
     clear: right;
     margin-right: -60%;
     width: 50%;
-    margin-top: 0;
+    margin-top: 0.3rem;
     margin-bottom: 0;
     font-size: 1.1rem;
     line-height: 1.3;
