Add comment to label
see #168 for discussion

--- a/tufte.css
+++ b/tufte.css
@@ -384,7 +384,7 @@ input.margin-toggle {
 
 label.sidenote-number {
     display: inline-block;
-    max-height: 2rem;
+    max-height: 2rem; /* should be less than or equal to paragraph line-height */
 }
 
 label.margin-toggle:not(.sidenote-number) {
